--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "moment": "^2.24.0",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "vue-qrcode-reader": "^2.1.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
