--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "cordova-plugin-android-permissions": "^1.0.2",
     "moment": "^2.24.0",
     "quasar": "^1.0.0",
     "vue-qrcode-reader": "^2.1.1"
