--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -14,6 +14,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "cordova-android": "^8.1.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "phonegap-plugin-barcodescanner": "^8.1.0"
   },
   "devDependencies": {
@@ -24,7 +26,12 @@
       "cordova-plugin-whitelist": {},
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-qrscanner": {}
     },
     "platforms": [
       "android"
