--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -14,9 +14,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "cordova-android": "^8.1.0",
-    "cordova-plugin-camera": "^4.1.0",
-    "cordova-plugin-qrscanner": "^3.0.1",
-    "phonegap-plugin-barcodescanner": "^8.1.0"
+    "cordova-plugin-barcodescanner": "^0.7.4",
+    "cordova-plugin-compat": "^1.2.0"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
@@ -24,14 +23,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "phonegap-plugin-barcodescanner": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
-      "cordova-plugin-android-permissions": {},
-      "cordova-plugin-camera": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
-      "cordova-plugin-qrscanner": {}
+      "cordova-plugin-barcodescanner": {},
+      "phonegap-plugin-barcodescanner": {}
     },
     "platforms": [
       "android"
