--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "cordova-android": "^8.1.0",
     "cordova-plugin-barcodescanner": "^0.7.4",
-    "cordova-plugin-compat": "^1.2.0"
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-webintent": "0.0.2"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
@@ -24,7 +27,9 @@
     "plugins": {
       "cordova-plugin-whitelist": {},
       "cordova-plugin-barcodescanner": {},
-      "phonegap-plugin-barcodescanner": {}
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-file-transfer": {},
+      "com.borismus.webintent": {}
     },
     "platforms": [
       "android"
